# DS210_project

./: Cargo.toml  Cleaned_Life_Expectancy_Data.csv  README.md
src/: clean.rs  eda.rs  eda_statistics.rs  graph.rs  load_clean.rs  main.rs  models.rs  year_eda.rs
