[package]
name = "project"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.1"
ndarray = "0.16.1"
ndarray-csv = "0.5.3"
ndarray-stats = "0.6.0"
ordered-float = "4.5.0"
plotters = { version = "0.3", features = ["errorbar"] }
petgraph = "0.6"
serde = { version = "1.0", features = ["derive"] }
statrs = "0.18.0"
itertools = "0.13.0"


